--- a/Lab№1_Exercise№1/Lab№01_Exercise№1.csproj
+++ b/Lab№1_Exercise№1/Lab№01_Exercise№1.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Greeter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
