--- a/Lab№6_Exercise№1/Lab№06_Exercise№1.csproj
+++ b/Lab№6_Exercise№1/Lab№06_Exercise№1.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BankAccount.cs" />
+    <Compile Include="AccountType.cs" />
+    <Compile Include="CreateAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
